# C-Project

./: raibow.cpp  requirements.md
C++ Project/MovieRecommendationSystem/: AuthManager.cpp  AuthManager.h  CMakeLists.txt  Config.h  DataStore.cpp  DataStore.h  FavouritesManager.cpp  FavouritesManager.h  Makefile  MenuController.cpp  MenuController.h  Models.h  MovieManager.cpp  MovieManager.h  RatingManager.cpp  RatingManager.h  RecommendationEngine.cpp  RecommendationEngine.h  WatchHistoryManager.cpp  WatchHistoryManager.h  db_setup.sql  main.cpp
C++ Project/MovieRecommendationSystem/posters/: README.md
